# OMG-game

./: .gitignore  CMakeLists.txt  README.md  build_web.bat  build_win.bat
include/: AudioManager.h  BlackHole.h  BlackHole.hpp  Enemy.h  Enemy.hpp  EnemyManager.h  EnemyManager.hpp  Font.h  Font.hpp  Grenade.h  Grenade.hpp  Image.h  Image.hpp  Input.hpp  Player.h  Player.hpp  Timer.h  Timer.hpp  Utility.h  Utility.hpp  Window.h  Window.hpp
src/: AudioManager.cpp  BlackHole.cpp  Enemy.cpp  EnemyManager.cpp  Grenade.cpp  Image.cpp  Input.cpp  Logger.cpp  Player.cpp  Timer.cpp  Utility.cpp  Window.cpp  main.cpp
